# libeasyio

./: .gitignore  Makefile.am  README.md  configure.ac
docs/: easyio.3
pc/pcbuild/: pcbuild.sln
pc/pcbuild/Debug/: pcbuild.exp  pcbuild.ilk  pcbuild.lib  pcbuildtest.ilk  test.txt
pc/pcbuild/pcbuild/: ReadMe.txt  pcbuild.vcxproj  pcbuild.vcxproj.filters
pc/pcbuild/pcbuild/Debug/: vc140.idb
pc/pcbuild/pcbuild/Debug/pcbuild.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  pcbuild.write.1u.tlog
pc/pcbuild/pcbuildtest/: pcbuildtest.vcxproj  pcbuildtest.vcxproj.filters
pc/pcbuild/pcbuildtest/Debug/: vc140.idb
pc/pcbuild/pcbuildtest/Debug/pcbuildtest.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  pcbuildtest.lastbuildstate
src/: Makefile.am  configure.h.in  easyio.c  easyio.h
test/: Makefile.am  file_get_contents.c  test_common.h
