noinst_HEADERS = configure.h
ACLOCAL_AMFLAGS = -I m4
AM_CFLAGS = $(CFLAG_VISIBILITY)
lib_LTLIBRARIES = libeasyio.la
libeasyio_la_SOURCES = configure.h easyio.c
libeasyio_la_CFLAGS = $(AM_CFLAGS)
libeasyio_la_CPPFLAGS = -DBUILDING_LIBEASYIO 
libeasyio_la_LDFLAGS = -no-undefined -version-info ${LIB_EASY_IO_VERSION}
include_HEADERS = easyio.h
